tests/snapshots/pre_reduce_run@tests::programs::u24.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/u24.hvm
---
{12 {8 {20 {5 {0 {0 {1 {0 {1 {2 {10 {8 {40 {2 {16777215 {0 {3 *}}}}}}}}}}}}}}}}}
pre-reduce:
RWTS   :              85
- ANNI :              16
- COMM :               1
- ERAS :              17
- DREF :              34
- OPER :              17
run:
RWTS   :              41
- ANNI :               1
- COMM :               0
- ERAS :               1
- DREF :              39
- OPER :               0
