tests/snapshots/run@examples::arithmetic.snap
---
source: tests/tests.rs
expression: output
input_file: examples/arithmetic.hvm
---
(#1{</ a b> <% c d>} (#2{a c} {b d}))
RWTS   :              18
- ANNI :               4
- COMM :               0
- ERAS :               0
- DREF :              14
- OPER :               0
