tests/snapshots/run@examples::lambda_calculus::hoas.snap
---
source: tests/tests.rs
expression: output
input_file: examples/lambda_calculus/hoas.hvm
---
(((a (((* a) b) (* (* b)))) c) (* (* c)))
RWTS   :             886
- ANNI :             484
- COMM :              11
- ERAS :             141
- DREF :             250
- OPER :               0
