tests/snapshots/run@examples::machine_u32::num_add.snap
---
source: tests/tests.rs
expression: output
input_file: examples/machine_u32/num_add.hvm
---
~223
RWTS   :               6
- ANNI :               2
- COMM :               0
- ERAS :               0
- DREF :               3
- OPER :               1
