tests/snapshots/run@examples::machine_u32::num_match.snap
---
source: tests/tests.rs
expression: output
input_file: examples/machine_u32/num_match.hvm
---
9
RWTS   :               9
- ANNI :               4
- COMM :               0
- ERAS :               1
- DREF :               3
- OPER :               1
