tests/snapshots/run@examples::sort::bitonic::bitonic_sort_lam.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/bitonic/bitonic_sort_lam.hvm
---
523776
RWTS   :       2_293_690
- ANNI :       1_375_188
- COMM :          96_766
- ERAS :         222_714
- DREF :         508_403
- OPER :          90_619
