tests/snapshots/run@examples::sort::merge::merge_sort.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/merge/merge_sort.hvm
---
#2(* #2(#2(#2(* #2(#2(#2(#2(3 a) #2(* a)) #2(#2(#2(2 b) #2(* b)) c)) c)) #2(#2(* #2(#2(#2(#2(1 d) #2(* d)) #2(#2(#2(0 e) #2(* e)) f)) f)) g)) g))
RWTS   :             474
- ANNI :              71
- COMM :             242
- ERAS :              79
- DREF :              66
- OPER :              16
