tests/snapshots/run@examples::sort::radix::radix_sort_lam.snap
---
source: tests/tests.rs
expression: output
input_file: examples/sort/radix/radix_sort_lam.hvm
---
#549755289600
RWTS   :   1_500_512_246
- ANNI :     846_200_803
- COMM :      28_311_560
- ERAS :     251_658_239
- DREF :     314_572_800
- OPER :      59_768_844
